--- a/Meeting Agenda App/CanvasManifest.json
+++ b/Meeting Agenda App/CanvasManifest.json
@@ -108,11 +108,11 @@
     "DocumentType": "App",
     "EnableInstrumentation": false,
     "FileID": "785549d1-f3cd-4684-a7a1-a571bc725ba5",
-    "Id": "1ee62414-acfb-4d4d-93e2-e4aa0d1a844d",
+    "Id": "4f16a06e-db95-4739-b391-254eac7b00ae",
     "InstrumentationKey": "",
     "LocalDatabaseReferences": "{}",
     "ManualOfflineProfileId": "",
-    "Name": "Meeting Agenda App",
+    "Name": "Meeting+Agenda+App.msapp",
     "OriginatingVersion": "1.243",
     "ParserErrorCount": 0,
     "ShowStatusBar": false
