--- a/Meeting Agenda App/Src/MeetingDetails Screen.fx.yaml
+++ b/Meeting Agenda App/Src/MeetingDetails Screen.fx.yaml
@@ -2082,8 +2082,7 @@
                         varDeleteflow,
                         DeleteAttachmentsFlow.Run(
                             ThisItem.Id,
-                           First(
-                                Filter(
+                           First(Filter(
                                     MeetingList,
                                     MeetingID = variCalUID.icaluid
                                 )
