--- a/Certification App/Src/Responsive Approval Status Screen.fx.yaml
+++ b/Certification App/Src/Responsive Approval Status Screen.fx.yaml
@@ -752,6 +752,7 @@
                         ZIndex: =7
 
                     Icon22_27 As icon.ChevronRight:
+                        AccessibleLabel: ="Icon22_27"
                         BorderColor: =RGBA(0, 0, 0, 1)
                         Color: =RGBA(0, 0, 0, 1)
                         Height: =17
@@ -816,6 +817,7 @@
                         ZIndex: =10
 
                     Icon32_27 As icon.Database:
+                        AccessibleLabel: ="Icon32_27"
                         BorderColor: =RGBA(0, 0, 0, 1)
                         Color: =RGBA(0, 0, 0, 1)
                         Height: =22
@@ -949,6 +951,7 @@
                         ZIndex: =20
 
                     Image12_27 As image:
+                        AccessibleLabel: ="Image12_27"
                         Height: =22
                         Image: ='question-octagon'
                         OnSelect: =Navigate(AskQuestion_Admin,ScreenTransition.UnCover);
@@ -961,6 +964,7 @@
                         ZIndex: =22
 
                     Icon5_8 As icon.ChevronDown:
+                        AccessibleLabel: ="Icon5_8"
                         Color: =RGBA(0, 0, 0, 1)
                         Height: =17
                         Icon: =Icon.ChevronDown
@@ -1164,6 +1168,7 @@
                             ZIndex: =28
 
                         Icon23_27 As icon.Download:
+                            AccessibleLabel: ="Icon23_27"
                             BorderColor: =RGBA(0, 0, 0, 1)
                             Color: =RGBA(0, 0, 0, 1)
                             FocusedBorderThickness: |
@@ -1464,6 +1469,7 @@
                             ZIndex: =1
 
                         "Gallery12_5 As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver4.0'":
+                            AccessibleLabel: ="Gallery12_5"
                             Height: =75
                             Items: =LookUp(CertificationOrder,ID=varCertificateStatus.ID).Attachments
                             Layout: =Layout.Vertical
@@ -1526,6 +1532,7 @@
                             ZIndex: =4
 
                             Radio2_2 As radio:
+                                AccessibleLabel: ="Radio2_2"
                                 BorderStyle: =BorderStyle.None
                                 Color: =RGBA(0, 100, 181, 1)
                                 Default: =If(varCertificateStatus.PaymentMode="Cash","Paid with cash","Paid with Voucher")
@@ -2324,6 +2331,7 @@
                                     ZIndex: =1
 
                                 "Gallery12_4 As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver4.0'":
+                                    AccessibleLabel: ="Gallery12_4"
                                     Height: =131
                                     Items: =LookUp(CertificationOrder,ID=varCertificateStatus.ID).Attachments
                                     Layout: =Layout.Vertical
@@ -2385,6 +2393,7 @@
                                     ZIndex: =4
 
                                     Radio2_1 As radio:
+                                        AccessibleLabel: ="Radio2_1"
                                         BorderStyle: =BorderStyle.None
                                         Color: =RGBA(0, 100, 181, 1)
                                         Default: =If(varCertificateStatus.PaymentMode="Cash","Paid with cash","Paid with Voucher")
@@ -2864,6 +2873,7 @@
                 ZIndex: =2
 
             TextInput4 As text:
+                AccessibleLabel: ="TextInput4"
                 Clear: =true
                 Default: =
                 Height: =203
@@ -3019,6 +3029,7 @@
                 ZIndex: =2
 
             TextInput4_2 As text:
+                AccessibleLabel: ="TextInput4_2"
                 Clear: =true
                 Default: =
                 Height: =203
@@ -3156,6 +3167,7 @@
         ZIndex: =4
 
         Icon29_50 As icon.ChevronRight:
+            AccessibleLabel: ="Icon29_50"
             BorderColor: =RGBA(0, 0, 0, 1)
             Color: =RGBA(0, 0, 0, 1)
             Height: =20
@@ -3190,6 +3202,7 @@
             ZIndex: =32
 
         Icon13_16 As icon.ChevronDown:
+            AccessibleLabel: ="Icon13_16"
             Color: =RGBA(0, 0, 0, 1)
             Height: =20
             Icon: =Icon.ChevronDown
@@ -3352,6 +3365,7 @@
                 ZIndex: =28
 
             Icon23_50 As icon.Download:
+                AccessibleLabel: ="Icon23_50"
                 BorderColor: =RGBA(0, 0, 0, 1)
                 Color: =RGBA(0, 0, 0, 1)
                 Height: =20
@@ -3427,6 +3441,7 @@
                 ZIndex: =3
 
             Icon22_50 As icon.ChevronRight:
+                AccessibleLabel: ="Icon22_50"
                 BorderColor: =RGBA(0, 0, 0, 1)
                 Color: =RGBA(0, 0, 0, 1)
                 Height: =17
@@ -3536,6 +3551,7 @@
                 ZIndex: =20
 
             Icon12_17 As icon.ChevronDown:
+                AccessibleLabel: ="Icon12_17"
                 Height: =17
                 HoverFill: =
                 Icon: =Icon.ChevronDown
@@ -3598,6 +3614,7 @@
                 ZIndex: =5
 
             Icon11_50 As icon.Home:
+                AccessibleLabel: ="Icon11_50"
                 BorderColor: =RGBA(0, 0, 0, 1)
                 Color: =RGBA(0, 0, 0, 1)
                 Height: =23
@@ -3693,6 +3710,7 @@
                 ZIndex: =4
 
             Icon32_50 As icon.Database:
+                AccessibleLabel: ="Icon32_50"
                 BorderColor: =RGBA(0, 0, 0, 1)
                 Color: =RGBA(0, 0, 0, 1)
                 Height: =22
@@ -3735,6 +3753,7 @@
                 ZIndex: =13
 
             Image12_52 As image:
+                AccessibleLabel: ="Image12_52"
                 Height: =22
                 Image: ='question-octagon'
                 OnSelect: =Navigate(AskQuestion_Admin,ScreenTransition.UnCover);
@@ -3745,6 +3764,7 @@
                 ZIndex: =22
 
     Icon2_13 As icon.Hamburger:
+        AccessibleLabel: ="Icon2_13"
         Color: =RGBA(0, 0, 0, 1)
         Height: =21
         Icon: =Icon.Hamburger
@@ -3757,6 +3777,7 @@
         ZIndex: =5
 
     Icon4_20 As icon.Reload:
+        AccessibleLabel: ="Icon4_20"
         Color: =RGBA(0, 0, 0, 1)
         Height: =21
         Icon: =Icon.Reload
@@ -3802,6 +3823,7 @@
             ZIndex: =7
 
         "UserGallery_14 As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver4.0'":
+            AccessibleLabel: ="UserGallery_14"
             BorderColor: =RGBA(0, 0, 0, 1)
             Fill: |-
                 =//RGBA(0, 0, 0, 0)
@@ -3845,6 +3867,7 @@
                 ZIndex: =5
 
         UserGalleryCancelIcon_15 As icon.Cancel:
+            AccessibleLabel: ="UserGalleryCancelIcon_15"
             Color: =RGBA(255, 255, 255, 1)
             Fill: =RGBA(255, 0, 0, 1)
             Height: =32
@@ -3857,6 +3880,7 @@
             ZIndex: =9
 
         "ManagerGallery_12 As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver4.0'":
+            AccessibleLabel: ="ManagerGallery_12"
             Fill: |-
                 =//RGBA(0, 0, 0, 0)
                 Color.White
@@ -3900,6 +3924,7 @@
                 ZIndex: =5
 
         MngrCancelicon_12 As icon.Cancel:
+            AccessibleLabel: ="MngrCancelicon_12"
             BorderThickness: =1
             Color: =RGBA(255, 255, 255, 1)
             Fill: =RGBA(255, 0, 0, 1)
@@ -3914,6 +3939,7 @@
             ZIndex: =11
 
         "ILDGAllery_12 As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver4.0'":
+            AccessibleLabel: ="ILDGAllery_12"
             Fill: |-
                 =//RGBA(0, 0, 0, 0)
                 Color.White
@@ -3951,6 +3977,7 @@
                 ZIndex: =5
 
         ILDCancelicon_12 As icon.Cancel:
+            AccessibleLabel: ="ILDCancelicon_12"
             Color: =RGBA(255, 255, 255, 1)
             Fill: =RGBA(255, 0, 0, 1)
             Height: =32
