--- a/Certification App/Src/Responsive Certification Status Screen.fx.yaml
+++ b/Certification App/Src/Responsive Certification Status Screen.fx.yaml
@@ -48,10 +48,11 @@
                     ZIndex: =2
 
                 txtSearch_10 As text:
+                    AccessibleLabel: ="txtSearch_10"
                     BorderColor: =RGBA(219, 219, 219, 1)
                     BorderThickness: =1
                     Color: =RGBA(161, 161, 161, 1)
-                    Default: =""
+                    Default: ="txtSearch_10"
                     Font: ="Source Sans Pro"
                     Height: =37
                     HintText: ="Search By Keyword"
@@ -74,6 +75,7 @@
                     ZIndex: =4
 
                 Image7_26 As image:
+                    AccessibleLabel: ="Image7_26"
                     BorderColor: =RGBA(0, 0, 0, 0)
                     Height: =40
                     Image: =User().Image
@@ -97,6 +99,7 @@
                     ZIndex: =13
 
                     icoEnrollList_22 As icon.ShoppingCart:
+                        AccessibleLabel: ="icoEnrollList_22"
                         Height: =53
                         Icon: =Icon.ShoppingCart
                         OnSelect: =Navigate('Responsive EnrollCertificate Screen', ScreenTransition.None)
@@ -131,6 +134,7 @@
                         ZIndex: =6
 
                         Bell_icon_19 As icon.Bell:
+                            AccessibleLabel: ="Bell_icon_19"
                             Height: =30
                             Icon: =Icon.Bell
                             OnSelect: |-
@@ -207,6 +211,7 @@
                         ZIndex: =14
 
                     userdrp_down_16 As dropdown:
+                        AccessibleLabel: ="userdrp_down_16"
                         BorderColor: =Color.Gray
                         BorderThickness: =0
                         ChevronBackground: =RGBA(0, 0, 0, 0)
@@ -274,6 +279,7 @@
                         ZIndex: =18
 
                     Icon17_17 As icon.Settings:
+                        AccessibleLabel: ="Icon17_17"
                         BorderColor: =RGBA(0, 0, 0, 1)
                         Color: =RGBA(0, 0, 0, 1)
                         Height: =23
@@ -304,6 +310,7 @@
                 ZIndex: =1
 
                 icoEnrollList_23 As icon.ShoppingCart:
+                    AccessibleLabel: ="icoEnrollList_23"
                     Height: =40
                     Icon: =Icon.ShoppingCart
                     OnSelect: =Navigate('Responsive EnrollCertificate Screen', ScreenTransition.None)
@@ -332,6 +339,7 @@
                         ZIndex: =1
 
                     userdrp_down_17 As dropdown:
+                        AccessibleLabel: ="userdrp_down_17"
                         BorderColor: =Color.Gray
                         BorderThickness: =0
                         ChevronBackground: =RGBA(0, 0, 0, 0)
@@ -397,6 +405,7 @@
                         ZIndex: =5
 
                     Icon17_18 As icon.Settings:
+                        AccessibleLabel: ="Icon17_18"
                         BorderColor: =RGBA(0, 0, 0, 1)
                         Color: =RGBA(0, 0, 0, 1)
                         Height: =15
@@ -434,6 +443,7 @@
                     ZIndex: =12
 
                     Bell_icon_20 As icon.Bell:
+                        AccessibleLabel: ="Bell_icon_20"
                         Height: =22
                         Icon: =Icon.Bell
                         OnSelect: |-
@@ -676,6 +686,7 @@
                         ZIndex: =5
 
                     Icon11_15 As icon.Home:
+                        AccessibleLabel: ="Icon11_15"
                         BorderColor: =RGBA(0, 0, 0, 1)
                         Color: =RGBA(0, 0, 0, 1)
                         Height: =23
@@ -716,6 +727,7 @@
                         ZIndex: =7
 
                     Icon22_15 As icon.ChevronRight:
+                        AccessibleLabel: ="Icon22_15"
                         BorderColor: =RGBA(0, 0, 0, 1)
                         Color: =RGBA(0, 0, 0, 1)
                         Height: =17
@@ -762,6 +774,7 @@
                         ZIndex: =9
 
                     Icon29_15 As icon.ChevronRight:
+                        AccessibleLabel: ="Icon29_15"
                         BorderColor: =RGBA(0, 0, 0, 1)
                         Color: =RGBA(0, 0, 0, 1)
                         Height: =20
@@ -777,6 +790,7 @@
                         ZIndex: =10
 
                     Icon32_15 As icon.Database:
+                        AccessibleLabel: ="Icon32_15"
                         BorderColor: =RGBA(0, 0, 0, 1)
                         Color: =RGBA(0, 0, 0, 1)
                         Height: =22
@@ -909,6 +923,7 @@
                         ZIndex: =20
 
                     Image12_15 As image:
+                        AccessibleLabel: ="Image12_15"
                         Height: =22
                         Image: ='question-octagon'
                         OnSelect: =Navigate(AskQuestion_Admin,ScreenTransition.UnCover);
@@ -921,6 +936,7 @@
                         ZIndex: =22
 
                     Icon5_2 As icon.ChevronDown:
+                        AccessibleLabel: ="Icon5_2"
                         Color: =RGBA(0, 0, 0, 1)
                         Height: =17
                         HoverFill: =//Self.Fill
@@ -952,6 +968,7 @@
                         ZIndex: =32
 
                     Icon6_2 As icon.ChevronDown:
+                        AccessibleLabel: ="Icon6_2"
                         Color: =RGBA(0, 0, 0, 1)
                         Height: =20
                         HoverFill: =//Self.Fill
@@ -1127,6 +1144,7 @@
                             ZIndex: =28
 
                         Icon23_15 As icon.Download:
+                            AccessibleLabel: ="Icon23_15"
                             BorderColor: =RGBA(0, 0, 0, 1)
                             Color: =RGBA(0, 0, 0, 1)
                             FocusedBorderThickness: |
@@ -1248,6 +1266,7 @@
                             ZIndex: =8
 
                         Radio2_3 As radio:
+                            AccessibleLabel: ="Radio2_3"
                             BorderStyle: =BorderStyle.None
                             Default: =If(varCertificateStatus.PaymentMode="Cash","Paid with cash","Paid with Voucher")
                             DisplayMode: =DisplayMode.View
@@ -1297,6 +1316,7 @@
                             ZIndex: =13
 
                             TextInput1_3 As text:
+                                AccessibleLabel: ="TextInput1_3"
                                 BorderColor: =RGBA(153, 153, 153, 1)
                                 BorderThickness: =0.1
                                 Default: =""
@@ -2812,6 +2832,7 @@
                             ZIndex: =8
 
                         Radio2 As radio:
+                            AccessibleLabel: ="Radio2"
                             BorderStyle: =BorderStyle.None
                             Default: =If(varCertificateStatus.PaymentMode="Cash","Paid with cash","Paid with Voucher")
                             DisplayMode: =DisplayMode.View
@@ -2863,6 +2884,7 @@
                             ZIndex: =13
 
                             TextInput1 As text:
+                                AccessibleLabel: ="TextInput1"
                                 BorderColor: =RGBA(153, 153, 153, 1)
                                 BorderThickness: =0.1
                                 Default: =""
@@ -4764,6 +4786,7 @@
                 ZIndex: =2
 
                 Attachments As attachments:
+                    AccessibleLabel: ="Attachments"
                     BorderColor: =RGBA(202, 202, 202, 1)
                     BorderThickness: =0.1
                     DropTargetBorderColor: =RGBA(219, 219, 219, 1)
@@ -4808,6 +4831,7 @@
                     ZIndex: =1
 
                 "Gallery8 As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver4.0'":
+                    AccessibleLabel: ="Gallery8"
                     Height: =75
                     Items: =Attachments.Attachments
                     Layout: =Layout.Vertical
@@ -4876,6 +4900,7 @@
                         ZIndex: =5
 
                 Toggle1 As toggleSwitch:
+                    AccessibleLabel: ="Toggle1"
                     FalseText: ="Add More"
                     FocusedBorderThickness: =0
                     FontWeight: =FontWeight.Bold
@@ -4902,6 +4927,7 @@
                     ZIndex: =5
 
                 "Gallery13 As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver4.0'":
+                    AccessibleLabel: ="Gallery13"
                     BorderColor: =RGBA(0, 0, 0, 0)
                     BorderThickness: =0.1
                     Height: =75
@@ -4936,6 +4962,7 @@
                         ZIndex: =6
 
                     RemoveAttachment As icon.Cancel:
+                        AccessibleLabel: ="RemoveAttachment"
                         Height: =17
                         Icon: =Icon.Cancel
                         OnSelect: |-
@@ -4972,6 +4999,7 @@
                 ZIndex: =3
 
                 Attachments_4 As attachments:
+                    AccessibleLabel: ="Attachments_4"
                     BorderColor: =RGBA(202, 202, 202, 1)
                     BorderThickness: =0.1
                     DropTargetBorderColor: =RGBA(219, 219, 219, 1)
@@ -5016,6 +5044,7 @@
                     ZIndex: =1
 
                 "Gallery8_1 As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver4.0'":
+                    AccessibleLabel: ="Gallery8_1"
                     Height: =75
                     Items: =Attachments_4.Attachments
                     Layout: =Layout.Vertical
@@ -5084,6 +5113,7 @@
                         ZIndex: =5
 
                 Toggle1_1 As toggleSwitch:
+                    AccessibleLabel: ="Toggle1_1"
                     FalseText: ="Add More"
                     FocusedBorderThickness: =0
                     FontWeight: =FontWeight.Bold
@@ -5110,6 +5140,7 @@
                     ZIndex: =5
 
                 "Gallery13_1 As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver4.0'":
+                    AccessibleLabel: ="Gallery13_1"
                     BorderColor: =RGBA(0, 0, 0, 0)
                     BorderThickness: =0.1
                     Height: =75
@@ -5144,6 +5175,7 @@
                         ZIndex: =6
 
                     RemoveAttachment_1 As icon.Cancel:
+                        AccessibleLabel: ="RemoveAttachment_1"
                         Height: =17
                         Icon: =Icon.Cancel
                         OnSelect: |
@@ -5178,6 +5210,7 @@
                 ZIndex: =4
 
                 Attachments_5 As attachments:
+                    AccessibleLabel: ="Attachments_5"
                     BorderColor: =RGBA(202, 202, 202, 1)
                     BorderThickness: =0.1
                     DropTargetBorderColor: =RGBA(219, 219, 219, 1)
@@ -5222,6 +5255,7 @@
                     ZIndex: =1
 
                 "Gallery8_3 As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver4.0'":
+                    AccessibleLabel: ="Gallery8_3"
                     Height: =75
                     Items: =Attachments_5.Attachments
                     Layout: =Layout.Vertical
@@ -5290,6 +5324,7 @@
                         ZIndex: =5
 
                 Toggle1_2 As toggleSwitch:
+                    AccessibleLabel: ="Toggle1_2"
                     FalseText: ="Add More"
                     FocusedBorderThickness: =0
                     FontWeight: =FontWeight.Bold
@@ -5316,6 +5351,7 @@
                     ZIndex: =5
 
                 "Gallery13_2 As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver4.0'":
+                    AccessibleLabel: ="Gallery13_2"
                     BorderColor: =RGBA(0, 0, 0, 0)
                     BorderThickness: =0.1
                     Height: =75
@@ -5350,6 +5386,7 @@
                         ZIndex: =6
 
                     RemoveAttachment_2 As icon.Cancel:
+                        AccessibleLabel: ="RemoveAttachment_2"
                         Height: =17
                         Icon: =Icon.Cancel
                         OnSelect: |
@@ -5384,6 +5421,7 @@
                 ZIndex: =5
 
                 Attachments_6 As attachments:
+                    AccessibleLabel: ="Attachments_6"
                     BorderColor: =RGBA(202, 202, 202, 1)
                     BorderThickness: =0.1
                     DropTargetBorderColor: =RGBA(219, 219, 219, 1)
@@ -5496,6 +5534,7 @@
                         ZIndex: =5
 
                 Toggle1_3 As toggleSwitch:
+                    AccessibleLabel: ="Toggle1_3"
                     FalseText: ="Add More"
                     FocusedBorderThickness: =0
                     FontWeight: =FontWeight.Bold
